[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts_scenes/Enemy.gd" type="Script" id=1]
[ext_resource path="res://audio/male_scream2.ogg" type="AudioStream" id=2]
[ext_resource path="res://audio/male_scream0.ogg" type="AudioStream" id=3]
[ext_resource path="res://audio/male_scream1.ogg" type="AudioStream" id=4]
[ext_resource path="res://audio/female_scream2.ogg" type="AudioStream" id=5]
[ext_resource path="res://audio/female_scream1.ogg" type="AudioStream" id=6]
[ext_resource path="res://audio/female_scream0.ogg" type="AudioStream" id=7]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_3D.gd" type="Script" id=8]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.854902, 0, 0, 1 )
metallic_specular = 1.0

[sub_resource type="CapsuleShape" id=3]
radius = 0.5

[sub_resource type="SphereMesh" id=4]
radius = 0.1
height = 0.2
radial_segments = 16
rings = 8

[sub_resource type="SphereShape" id=5]
radius = 500.0

[node name="Enemy" type="KinematicBody" groups=[
"Enemies",
]]
script = ExtResource( 1 )

[node name="EnemyBody" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="BodyPhysics" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Eyes" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.5 )
mesh = SubResource( 4 )
material/0 = null

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
aabb = AABB( -0.5, -1, -0.6, 1, 2, 1.2 )

[node name="SphericalVision" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="SphericalVision"]
shape = SubResource( 5 )

[node name="RandomScreams" type="AudioStreamPlayer3D" parent="."]
attenuation_filter_db = 0.0
script = ExtResource( 8 )
streams = [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ]
random_strategy = 2
randomize_volume = true
volume_min = 20.0
volume_max = 24.0
randomize_pitch = true
pitch_min = 0.9
pitch_max = 1.1
[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="body_entered" from="SphericalVision" to="." method="_on_SphericalVision_body_entered"]
[connection signal="body_exited" from="SphericalVision" to="." method="_on_SphericalVision_body_exited"]
